<resources>
    <string name="app_name">New Photo Editer</string>
    <string name="Title_email">Photo Editor New feed back</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_sort">Sort</string>
    <string name="admob_app_id">ca-app-pub-2454010314218375~3441976168</string>
    <string name="admob_banner">ca-app-pub-2454010314218375/3309828814</string>
    <string name="admob_full">ca-app-pub-2454010314218375/7894272784</string>
    <string name="admob_native">ca-app-pub-2454010314218375/1937322807</string>
    <string name="ads_fb_banner">//</string>
    <string name="ads_fb_full">//</string>
    <string name="ads_fb_native">//</string>
    <string name="all_image">All Images</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brightness">Brightness</string>
    <string name="btn_new_crop">New crop</string>
    <string name="camera">Camera</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_email">Choose an app</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="collage">Collage</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_close">Are you sure you want to close this activity?</string>
    <string name="confirm_exit">Do you really want to exit?</string>
    <string name="contrast">Contrast</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="email_feedback">bongbongcuanang@gmail.com</string>
    <string name="exit_app">Exit</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropwdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="feedback">Feedback and support</string>
    <string name="follow_us">Follow us on Instagram</string>
    <string name="give_us_five_star">Give 5 stars</string>
    <string name="good_5_stars">Good, 5 stars</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="instagram_require">You need to install Instagram before</string>
    <string name="install_app_ads">Install Now</string>
    <string name="key_border_color">border_color</string>
    <string name="key_corner_color">corner_color</string>
    <string name="key_crop_shape">crop_shape</string>
    <string name="key_dashed_grid">dashed_grid</string>
    <string name="key_draw_grid">is_draw_grid</string>
    <string name="key_dynamic_crop">is_dynamic_crop</string>
    <string name="key_enable_scale_gesture">enable_scale</string>
    <string name="key_enable_translate_gesture">enable_translation</string>
    <string name="key_grid_color">grid_color</string>
    <string name="key_overlay_color">overlay_color</string>
    <string name="key_quality">image_quality</string>
    <string name="key_save_format">image_format</string>
    <string name="key_scale">key_scale</string>
    <string name="label_adjust">Adjust</string>
    <string name="label_background">Background</string>
    <string name="label_background_full_screen">Full Screen</string>
    <string name="label_background_height">Padding Height</string>
    <string name="label_background_radius">Border Radius</string>
    <string name="label_background_width">Padding Width</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_filter">Filter</string>
    <string name="label_overlay">Overlay</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_text">Text</string>
    <string name="label_text_color">Text Color</string>
    <string name="label_text_fonts">Text Font</string>
    <string name="label_text_shadow">Text Shadow</string>
    <string name="label_text_size">Text Size</string>
    <string name="label_text_transparent">Text Transparent</string>
    <string name="later">Later</string>
    <string name="message_dialog_feed_back">Request bug fix and implement new features via email</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">Save</string>
    <string name="mtrl_picker_date_format">MMM dd, yyyy</string>
    <string name="mtrl_picker_header_prompt">Pick a Date</string>
    <string name="mtrl_picker_header_selected">%1$s</string>
    <string name="mtrl_picker_range_header_prompt">Pick a Date Range</string>
    <string name="mtrl_picker_range_header_selected">%1$s - %2$s</string>
    <string name="no">No</string>
    <string name="not_good">Not good</string>
    <string name="not_set">Not set</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pick_image_from_gallery">PICK IMAGE FROM GALLERY</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="press_one_more_time">Press one more time to exit</string>
    <string name="purchased_success">Congratulation! Purchased successfully. Now you can use app without any advertisements</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_later">Rate later</string>
    <string name="rate_msg">Our team are working very hard to give you the best free application. Your 5-star review is worth more than all money. Please write a nice review in Google Play to encourage me.</string>
    <string name="rate_us">Rate us 5*</string>
    <string name="rating_promote">If Photo Editor makes you happy and satisfy. Please give us 5*</string>
    <string name="remind_later">Remind later</string>
    <string name="remove_ads">With 5$ you can remove advertisement totally</string>
    <string name="remove_ads_txt">Remove Ads</string>
    <string name="restore_purchased_success">Congratulation! Restore purchased successfully. Now you can use app without any advertisement</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="saturation">Saturation</string>
    <string name="save">SAVE</string>
    <string name="save_and_share">Save and Share</string>
    <string name="settings">More</string>
    <string name="share_friend">Share app</string>
</resources>