<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/style_dialog_full" android:layout_width="match_parent" android:layout_height="wrap_content">
    <FrameLayout android:id="@+id/native_ad_media_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@+id/bt_container">
        <ImageView android:gravity="center" android:id="@+id/ivAdsBig" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="150dp" android:src="@drawable/ic_nz_studio" android:scaleType="fitCenter" android:adjustViewBounds="true"/>
    </FrameLayout>
    <TextView android:textSize="0x7f0703b4" android:textColor="@color/text_color" android:id="@+id/rd_msg" android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_msg" android:fontFamily="@font/roboto_light"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="5dp">
        <TextView android:textSize="0x7f0703b4" android:textColor="@color/text_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/btn_good" android:background="@drawable/selector_button" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/good_5_stars" android:layout_weight="50" android:textAllCaps="true" android:fontFamily="@font/roboto_regular"/>
        <TextView android:textSize="0x7f0703b4" android:textColor="@color/text_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/btn_not_good" android:background="@drawable/selector_button" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/not_good" android:layout_weight="50" android:textAllCaps="true" android:fontFamily="@font/roboto_regular"/>
        <TextView android:textSize="0x7f0703b4" android:textColor="@color/text_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/btn_late" android:background="@drawable/selector_button" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/remind_later" android:layout_weight="50" android:textAllCaps="true" android:fontFamily="@font/roboto_regular"/>
    </LinearLayout>
</LinearLayout>