<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/basic_white" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:theme="?attr/actionBarTheme" android:id="@+id/toolbar" android:background="@color/basic_white" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:minHeight="?attr/actionBarSize" app:layout_constraintTop_toTopOf="0" app:popupTheme="?attr/actionBarPopupTheme" app:title="@string/settings" app:titleTextColor="@color/text_color_edit"/>
    <View android:background="@color/line_color" android:layout_width="match_parent" android:layout_height="1dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <LinearLayout android:orientation="vertical" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <RelativeLayout android:id="@+id/rate_us" android:background="@drawable/border_bottom_one_px" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?attr/selectableItemBackgroundBorderless">
            <TextView android:textSize="16sp" android:textColor="@color/text_color_edit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_us" android:fontFamily="@font/roboto"/>
            <ImageView android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/star_icon_black" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/share_app" android:background="@drawable/border_bottom_one_px" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?attr/selectableItemBackgroundBorderless">
            <TextView android:textSize="16sp" android:textColor="@color/text_color_edit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_friend" android:fontFamily="@font/roboto"/>
            <ImageView android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/share_icon" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/feedback" android:background="@drawable/border_bottom_one_px" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?attr/selectableItemBackgroundBorderless">
            <TextView android:textSize="16sp" android:textColor="@color/text_color_edit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback" android:fontFamily="@font/roboto"/>
            <ImageView android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/feedback_icon" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>